// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/metadata Should handle failed parsing of sourceUrls for GitLab 1`] = `
Object {
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-02-14T13:12:00.000Z",
      "version": "5.7.0",
    },
    Object {
      "releaseTimestamp": "2020-02-14T10:04:00.000Z",
      "version": "5.6.1",
    },
  ],
  "sourceUrl": "https://gitlab-nope",
}
`;

exports[`datasource/metadata Should handle failed parsing of sourceUrls for other 1`] = `
Object {
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-02-14T13:12:00.000Z",
      "version": "5.7.0",
    },
    Object {
      "releaseTimestamp": "2020-02-14T10:04:00.000Z",
      "version": "5.6.1",
    },
  ],
  "sourceUrl": "https://nope-nope-nope",
}
`;

exports[`datasource/metadata Should handle manualChangelogUrls 1`] = `
Object {
  "changelogUrl": "https://github.com/django/django/tree/master/docs/releases",
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-07-13T10:14:17.000Z",
      "version": "2.0.0",
    },
    Object {
      "releaseTimestamp": "2017-10-24T10:09:16.000Z",
      "version": "2.0.0.dev1",
    },
    Object {
      "releaseTimestamp": "2019-01-20T19:59:28.000Z",
      "version": "2.1.0",
    },
    Object {
      "releaseTimestamp": "2019-07-16T18:29:00.000Z",
      "version": "2.2.0",
    },
  ],
  "sourceUrl": "https://github.com/django/django",
}
`;

exports[`datasource/metadata Should handle manualSourceUrls 1`] = `
Object {
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-07-13T10:14:17.000Z",
      "version": "2.0.0",
    },
    Object {
      "releaseTimestamp": "2017-10-24T10:09:16.000Z",
      "version": "2.0.0.dev1",
    },
    Object {
      "releaseTimestamp": "2019-01-20T19:59:28.000Z",
      "version": "2.1.0",
    },
    Object {
      "releaseTimestamp": "2019-07-16T18:29:00.000Z",
      "version": "2.2.0",
    },
  ],
  "sourceUrl": "https://github.com/mkdocs/mkdocs",
}
`;

exports[`datasource/metadata Should handle non-url 1`] = `
Object {
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-02-14T13:12:00.000Z",
      "version": "5.7.0",
    },
    Object {
      "releaseTimestamp": "2020-02-14T10:04:00.000Z",
      "version": "5.6.1",
    },
  ],
}
`;

exports[`datasource/metadata Should handle parsing of sourceUrls correctly 1`] = `
Object {
  "releases": Array [
    Object {
      "releaseTimestamp": "2018-07-13T10:14:17.000Z",
      "version": "2.0.0",
    },
    Object {
      "releaseTimestamp": "2017-10-24T10:09:16.000Z",
      "version": "2.0.0.dev1",
    },
    Object {
      "releaseTimestamp": "2019-01-20T19:59:28.000Z",
      "version": "2.1.0",
    },
    Object {
      "releaseTimestamp": "2019-07-16T18:29:00.000Z",
      "version": "2.2.0",
    },
  ],
  "sourceUrl": "https://github.com/carltongibson/django-filter",
}
`;

exports[`datasource/metadata Should handle parsing of sourceUrls correctly for GitLab also 1`] = `
Object {
  "releases": Array [
    Object {
      "releaseTimestamp": "2020-02-14T13:12:00.000Z",
      "version": "5.7.0",
    },
    Object {
      "releaseTimestamp": "2020-02-14T10:04:00.000Z",
      "version": "5.6.1",
    },
  ],
  "sourceUrl": "https://gitlab.com/meno/dropzone",
}
`;
